# paeon

./: .gitignore  AI_SETUP_GUIDE.md  ARCHITECTURE.md  BACKEND_SETUP.md  FEATURE_UPDATE.md  QUICKSTART.md  README.md  backend_stub.py  index.html  package-lock.json  package.json  tailwind.config.js  test_llm.py  tsconfig.json
backend/: README.md  pyproject.toml  requirements-minimal.txt  requirements.txt  verify_setup.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  assets.py  health.py  rag.py  slang.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/app/services/assets/: __init__.py  engine.py
backend/app/services/compliance/: __init__.py  audit.py  pii_stripper.py  safety_validator.py
backend/app/services/rag/: __init__.py  engine.py
backend/app/services/slang/: __init__.py  engine.py
backend/prompts/: README.md
src/: App.tsx  index.css
src/components/: ClinicalHeader.tsx  IntelligenceFeed.tsx  LiveAssetPreview.tsx  Sidebar.tsx  SlangTranslator.tsx  SourceDrawer.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  switch.tsx  (+4 more)
src/lib/: api.ts  store.ts
